feat: adding module implementation for AWS
